# sucms

./: .gitignore  Cargo.toml  command.go  config.go  file.yml  generator.go  go.mod  go.sum  logger.go  main.go
config/: config.go
pkg/: logger.go
src/: config.rs  generator.rs  logger.rs  main.rs  raw_yaml_data.rs
template/: builder.go  gen.go  gen_test.go  one.tmpl  types.go
windows/: command.go  generator.go
