[package]
name = "sucms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.3"
serde = { version = "1.0.157", features = ["derive"] }
serde_yaml = "0.9"
console = { version = "0.15", default-features = false, features = ["ansi-parsing"] }
duct = "0.13.6"